--- a/public/global.css
+++ b/public/global.css
@@ -61,3 +61,15 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+/* Extra styles */
+body{
+	background-color: rgb(16, 31, 63);
+	color: #eee;
+	padding: 0;
+	margin: 0;
+}
+
+h4 {
+	color: orangered;
+}
