:sparkles: reusable tabs component

--- a/public/global.css
+++ b/public/global.css
@@ -63,7 +63,7 @@ button:focus {
 }
 
 /* Extra styles */
-body{
+/* body{
 	background-color: rgb(16, 31, 63);
 	color: #eee;
 	padding: 0;
@@ -72,4 +72,4 @@ body{
 
 h4 {
 	color: orangered;
-}
+} */
